# Speex

app/: build.gradle
app/src/androidTest/java/com/speex/speex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libspeex/: bits.c  buffer.c  fftwrap.c  jitter.c  lsp.c  ltp.c  mdf.c  modes_wb.c  preprocess.c  resample.c  scal.c  speex.c  speex_callbacks.c  speex_header.c  stereo.c
app/src/main/java/com/speex/jni/: Speex.java
app/src/main/java/com/speex/speex/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/speex/speex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
